--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.session.jdbc.initialize-schema=always
+spring.security.oauth2.client.registration.google.client-id=635977248164-l1o874t16ghgp15m3r90j6usi2f7gtkc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=9Fqp7LYg9nEKscCLxcTe_nqm
